--- a/package.json
+++ b/package.json
@@ -2,17 +2,21 @@
   "name": "ecs-example",
   "version": "1.0.0",
   "description": "",
-  "main": "index.html",
+  "private": true,
   "directories": {
     "lib": "lib"
   },
   "dependencies": {
-    "lipstick-ecs": "^0.0.1"
+    "lipstick-ecs": "0.0.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "webpack": "^4.27.1",
+    "webpack-cli": "^3.1.2"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "ci": "tsc -p . && npx webpack --config webpack.config.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "MIT"
 }
