--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lib": "lib"
   },
   "dependencies": {
-    "lipstick-ecs": "0.1.4"
+    "lipstick-ecs": "^0.2.5"
   },
   "devDependencies": {
     "webpack": "^4.27.1",
